unbe1iev-dev/callback/statefulset.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: unbe1iev-callback
  namespace: unbe1iev-dev
spec:
  replicas: 1
  selector:
    matchLabels:
      app: callback
  template:
    metadata:
      labels:
        app: callback
    spec:
      containers:
      - name: callback
        image: harbor.unbe1iev.com/unbe1iev-dev/callback:1.0.0
        ports:
        - containerPort: 8000
      imagePullSecrets:
      - name: unbe1iev-docker-login
