unbe1iev-dev/callback/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: unbe1iev-callback
  namespace: unbe1iev-dev
spec:
  type: LoadBalancer
  selector:
    app: callback
  ports:
    - protocol: TCP
      port: 8000
      targetPort: 8000
